# SameStats

./: .gitignore  CMakeLists.txt  README.md  line_shapes.cpp  line_shapes.h  main.cpp  project.cpp  scatter_plot.py  sim_ann.cpp  sim_ann.h  test.cpp  utils.cpp  utils.h
catch/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: line_shapes.h  sim_annealing.h  utils.h
lib/src/: line_shapes.cpp  sim_annealing.cpp  utils.cpp
paper/: literature.bib  paper.tex
